[tool.poetry]
name = "derivatives"
version = "0.1.0"
description = ""
authors = ["Etore-BeS <etorebraga@usp.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
streamlit = "^1.38.0"
numpy = "1.26"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
scipy = "1.14.0"
yfinance = "^0.2.43"
sympy = "^1.13.3"
plotly = "^5.24.1"
imageio = "^2.35.1"
manimlib = "^0.2.0"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
